--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!--Header-->
-    <header class="header">
+    <!-- <header class="header">
         <div class="container header-container">
             <nav class="header-nav">
                 <a class="link-logo link" href="./index.html" title="Посилання на початкову сторінку"><span
@@ -54,10 +54,10 @@
             </ul>
 
         </div>
-    </header>
+    </header> -->
     <main>
         <!-- Hero-->
-        <section class="hero hero-background">
+        <!-- <section class="hero hero-background">
             <div class="hero-container container">
                 <h1 class="hero-title">Ефектні рішення для <br> вашого бізнесу</h1>
                 <button class="btn" type="button" data-modal-open>Замовити послугу</button>
@@ -119,9 +119,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Our rules for success-->
-        <section class="rules">
+        <!-- <section class="rules">
             <div class="container rules-container">
                 <h2 class="rules-title visually-hidden">Наші правила успіху</h2>
                 <ul class="rules-list list">
@@ -149,9 +149,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- Development -->
-        <section class="development">
+        <!-- <section class="development">
             <div class="development-container container">
                 <h2 class="development-title">Чим ми займаємося</h2>
                 <ul class="development-list list">
@@ -169,7 +169,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!--Our Team-->
         <section class="team">
             <div class="team-container container">
@@ -327,7 +327,7 @@
             </div>
         </section>
         <!-- Section Customers -->
-        <section class="customers">
+        <!-- <section class="customers">
             <div class="customers__container container">
                 <h2 class="customers__title">Постійні клієнти</h2>
                 <ul class="labels list">
@@ -381,10 +381,10 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer-container container">
             <div>
                 <a class="link-logo link" href="./index.html" title="Посилання на початкову сторінку"><span
@@ -440,7 +440,7 @@
                 <h2 class="subscribe-title">Підпишіться на розсилку</h2>
 
                 <div class="subscribe-input-field">
-                    <!-- <span class="input-name">Пошта</span> -->
+                    //<span class="input-name">Пошта</span>//
                     <input class="subscribe-input-text" type="email" name="email" placeholder="email" />
                     <div class="subscribe-qwert">
                         <button class="footer-btn" type="submit">Підписатися <svg class="subscribe-icon" width="24"
@@ -453,7 +453,7 @@
             </div>
 
         </div>
-    </footer>
+    </footer> -->
     <script>
         (() => {
             document
