--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </section> -->
         <!-- Our rules for success-->
-        <!-- <section class="rules">
+        <section class="rules">
             <div class="container rules-container">
                 <h2 class="rules-title visually-hidden">Наші правила успіху</h2>
                 <ul class="rules-list list">
@@ -149,9 +149,9 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- Development -->
-        <!-- <section class="development">
+        <section class="development">
             <div class="development-container container">
                 <h2 class="development-title">Чим ми займаємося</h2>
                 <ul class="development-list list">
@@ -169,7 +169,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!--Our Team-->
         <section class="team">
             <div class="team-container container">
