--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </header> -->
     <main>
         <!-- Hero-->
-        <!-- <section class="hero hero-background">
+        <section class="hero hero-background">
             <div class="hero-container container">
                 <h1 class="hero-title">Ефектні рішення для <br> вашого бізнесу</h1>
                 <button class="btn" type="button" data-modal-open>Замовити послугу</button>
@@ -105,12 +105,11 @@
                             </label>
 
                             <div>
-                                <label class="input-field">
+                                <label class="checkbox-fild">
                                     <input class="checkbox" type="checkbox" name="License" value="License" id="License">
                                     <span class="checkbox-icon"></span>
                                     <span class="checkbox-text">Погоджуюся з розсилкою та приймаю <a
                                             class="checkbox-link link" href="">Умови договору</a> </span>
-
                                 </label>
                             </div>
 
@@ -119,7 +118,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- Our rules for success-->
         <section class="rules">
             <div class="container rules-container">
@@ -151,7 +150,7 @@
             </div>
         </section>
         <!-- Development -->
-        <section class="development">
+        <!-- <section class="development">
             <div class="development-container container">
                 <h2 class="development-title">Чим ми займаємося</h2>
                 <ul class="development-list list">
@@ -169,14 +168,14 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!--Our Team-->
-        <section class="team">
+        <!-- <section class="team">
             <div class="team-container container">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-list-item">
-                        <img width="270" src="./images/team-1-igor_demyanenko.jpg" alt="Ігор Дем'яненко">
+                        <img width="100%" src="./images/team-1-480.jpg" alt="Ігор Дем'яненко">
                         <div class="team-list-profession">
                             <h3 class="team-list-title">Ігор Дем'яненко</h3>
                             <p class="team-list-text" lang="en">Product Designer</p>
@@ -213,7 +212,7 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img width="270" src="./images/team-2-olga_repina.jpg" alt="Ольга Рєпіна">
+                        <img width="100%" src="./images/team-2-480.jpg" alt="Ольга Рєпіна">
                         <div class="team-list-profession">
                             <h3 class="team-list-title">Ольга Рєпіна</h3>
                             <p class="team-list-text" lang="en">Frontend Developer</p>
@@ -250,7 +249,7 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img width="270" src="./images/team-3-mykola_tarasov.jpg" alt="Микола Тарасов">
+                        <img width="100%" src="./images/team-3-480.jpg" alt="Микола Тарасов">
                         <div class="team-list-profession">
                             <h3 class="team-list-title">Микола Тарасов</h3>
                             <p class="team-list-text" lang="en">Marketing</p>
@@ -287,7 +286,7 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img width="270" src="./images/team-4-myschajlo_jermakov.jpg" alt="Михайло Єрмаков">
+                        <img width="100%" src="./images/team-4-480.jpg" alt="Михайло Єрмаков">
                         <div class="team-list-profession">
                             <h3 class="team-list-title">Михайло Єрмаков</h3>
                             <p class="team-list-text" lang="en">UI Designer</p>
@@ -325,7 +324,7 @@
             </div>
             </ul>
             </div>
-        </section>
+        </section> -->
         <!-- Section Customers -->
         <!-- <section class="customers">
             <div class="customers__container container">
