--- a/index.html
+++ b/index.html
@@ -104,14 +104,13 @@
                                 <textarea class="input-feetback" name="feedback" placeholder="Введіть текст"></textarea>
                             </label>
 
-                            <div>
-                                <label class="checkbox-fild">
-                                    <input class="checkbox" type="checkbox" name="License" value="License" id="License">
-                                    <span class="checkbox-icon"></span>
-                                    <span class="checkbox-text">Погоджуюся з розсилкою та приймаю <a
-                                            class="checkbox-link link" href="">Умови договору</a> </span>
-                                </label>
-                            </div>
+                            <label class="checkbox-fild">
+                                <input class="checkbox" type="checkbox" name="License" value="License" id="License">
+                                <span class="checkbox-icon"></span>
+                                <span class="checkbox-text">Погоджуюся з розсилкою та приймаю <a
+                                        class="checkbox-link link" href="">Умови договору</a> </span>
+                            </label>
+
 
                             <button class="button-submit" type="submit">Submit</button>
                         </form>
@@ -150,7 +149,7 @@
             </div>
         </section>
         <!-- Development -->
-        <!-- <section class="development">
+        <section class="development">
             <div class="development-container container">
                 <h2 class="development-title">Чим ми займаємося</h2>
                 <ul class="development-list list">
@@ -168,9 +167,9 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!--Our Team-->
-        <!-- <section class="team">
+        <section class="team">
             <div class="team-container container">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list list">
@@ -324,9 +323,9 @@
             </div>
             </ul>
             </div>
-        </section> -->
+        </section>
         <!-- Section Customers -->
-        <!-- <section class="customers">
+        <section class="customers">
             <div class="customers__container container">
                 <h2 class="customers__title">Постійні клієнти</h2>
                 <ul class="labels list">
@@ -380,7 +379,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     </main>
     <!-- Footer -->
     <!-- <footer class="footer">
