--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!--Header-->
-    <!-- <header class="header">
+    <header class="header">
         <div class="container header-container">
             <nav class="header-nav">
                 <a class="link-logo link" href="./index.html" title="Посилання на початкову сторінку"><span
@@ -52,9 +52,70 @@
                     </a>
                 </li>
             </ul>
+            <!-- --------------Mobile menu-------------- -->
+            <!-- --------------Button------------------- -->
+            <!-- <button type="button" class="menu-open" data-menu-open>O</button> -->
+            <button class="button-menu-open btn" type="button" data-menu-open>
+                <svg class="button-modal-svg" width="40" height="40">
+                    <use href="./images/icons.svg#icon-menu_40px"> </use>
+                </svg></button>
+            <!-- --------------Mobile menu-------------- -->
+            <!-- --------------Window------------------- -->
+        </div>
+        <div class="mobile-menu is-hidden" data-menu>
+            <div class="mobile-menu-container container">
+
+                <button type="button-menu-close" class="button-menu-close" data-menu-close>
+                    <svg class="button-modal-svg" width="40" height="40">
+                        <use href="./images/icons.svg#icon-close_40px"> </use>
+                    </svg>
+                </button>
+
+                <div>
+                    <ul class="mobile-menu-list list">
+                        <li class="mobile-menu-text">
+                            <a class="link current" href="./index.html" title="Посилання на сторінку: Студія">Студія</a>
+                        </li>
+                        <li class="mobile-menu-text">
+                            <a class="link" href="./portfolio.html"
+                                title="Посилання на сторінку: Портфоліо">Портфоліо</a>
+                        </li>
+                        <li class="mobile-menu-text"> <a class="link" href="#"
+                                title="Посилання на сторінку: Контакти">Контакти</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <ul class="mobmenu-contact list">
+                        <li class="mobmenu-contact-text">
+                            <a class="mobmenu-tel link" href="tel:+380961111111" title="За телефонувати">
+                                +38 096 111 11 11
+                            </a>
+                        </li>
+                        <li class="mobmenu-contact-text">
+                            <a class="mobmenu-mail link" href="mailto:info@devstudio.com"
+                                title="Посилання на електронну скриньку">
+                                info@devstudio.com
+                            </a>
+                        </li>
+
+                    </ul>
+
+                    <ul class="mobmenu-soc list">
+                        <li class="mobmenu-soc-text"><a class="mobmenu-soc-link link" href=""
+                                title="Посилання на сторінку: Instagram">Instagram</a></li>
+                        <li class="mobmenu-soc-text"><a class="mobmenu-soc-link link" href=""
+                                title="Посилання на сторінку: Twitter">Twitter</a></li>
+                        <li class="mobmenu-soc-text"><a class="mobmenu-soc-link link" href=""
+                                title="Посилання на сторінку: Facebock">Facebock</a></li>
+                        <li class="mobmenu-soc-text"><a class="mobmenu-soc-link link" href=""
+                                title="Посилання на сторінку: Linkedin">Linkedin</a></li>
+                    </ul>
+                </div>
+            </div>
 
         </div>
-    </header> -->
+    </header>
     <main>
         <!-- Hero-->
         <section class="hero hero-background">
@@ -154,15 +215,27 @@
                 <h2 class="development-title">Чим ми займаємося</h2>
                 <ul class="development-list list">
                     <li class="development-list__text">
-                        <img width="370" height="260" src="./images/box-1.jpg" alt="Розробка сайту">
+                        <picture>
+                            <source srcset="./images/box-1-1200.jpg 1x, ./images/box-1-1200-2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <img width="370" height="260" src="./images/box-1.jpg" alt="Розробка сайту">
+                        </picture>
                         <h3 class="development-list__title">Десктопні додатки</h3>
                     </li>
                     <li class="development-list__text">
-                        <img width="370" height="260" src="./images/box-2.jpg" alt="Дизайн сайту">
+                        <picture>
+                            <source srcset="./images/box-2-1200.jpg 1x, ./images/box-2-1200-2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <img width="370" height="260" src="./images/box-2.jpg" alt="Дизайн сайту">
+                        </picture>
                         <h3 class="development-list__title">Мобільні додатки</h3>
                     </li>
                     <li class="development-list__text">
-                        <img width="370" height="260" src="./images/box-3.jpg" alt="Оформлення сайту">
+                        <picture>
+                            <source srcset="./images/box-3-1200.jpg 1x, ./images/box-3-1200-2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <img width="370" height="260" src="./images/box-3.jpg" alt="Оформлення сайту">
+                        </picture>
                         <h3 class="development-list__title">Дизайнерські рішення</h3>
                     </li>
                 </ul>
@@ -174,7 +247,15 @@
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-list-item">
-                        <img width="100%" src="./images/team-1-480.jpg" alt="Ігор Дем'яненко">
+                        <picture>
+                            <source srcset="./images/team-1-1200.jpg 1x, ./images/team-1-1200-2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <source srcset="./images/team-1-768.jpg 1x, ./images/team-1-768-2x.jpg 2x"
+                                media="(min-width: 768px)" />
+                            <source srcset="./images/team-1-480.jpg 1x, ./images/team-1-480-2x.jpg 2x"
+                                media="(max-width: 767px)" />
+                            <img width="100%" src="./images/team-1-480.jpg" alt="Ігор Дем'яненко">
+                        </picture>
                         <div class="team-list-profession">
                             <h3 class="team-list-title">Ігор Дем'яненко</h3>
                             <p class="team-list-text" lang="en">Product Designer</p>
@@ -211,7 +292,16 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img width="100%" src="./images/team-2-480.jpg" alt="Ольга Рєпіна">
+                        <picture>
+                            <source srcset="./images/team-2-1200.jpg 1x, ./images/team-2-1200-2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <source srcset="./images/team-2-768.jpg 1x, ./images/team-2-768-2x.jpg 2x"
+                                media="(min-width: 768px)" />
+                            <source srcset="./images/team-2-480.jpg 1x, ./images/team-2-480-2x.jpg 2x"
+                                media="(max-width: 767px)" />
+                            <img width="100%" src="./images/team-2-480.jpg" alt="Ольга Рєпіна">
+                        </picture>
+
                         <div class="team-list-profession">
                             <h3 class="team-list-title">Ольга Рєпіна</h3>
                             <p class="team-list-text" lang="en">Frontend Developer</p>
@@ -248,7 +338,15 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img width="100%" src="./images/team-3-480.jpg" alt="Микола Тарасов">
+                        <picture>
+                            <source srcset="./images/team-3-1200.jpg 1x, ./images/team-3-1200-2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <source srcset="./images/team-3-768.jpg 1x, ./images/team-3-768-2x.jpg 2x"
+                                media="(min-width: 768px)" />
+                            <source srcset="./images/team-3-480.jpg 1x, ./images/team-3-480-2x.jpg 2x"
+                                media="(max-width: 767px)" />
+                            <img width="100%" src="./images/team-3-480.jpg" alt="Микола Тарасов">
+                        </picture>
                         <div class="team-list-profession">
                             <h3 class="team-list-title">Микола Тарасов</h3>
                             <p class="team-list-text" lang="en">Marketing</p>
@@ -285,7 +383,16 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img width="100%" src="./images/team-4-480.jpg" alt="Михайло Єрмаков">
+                        <picture>
+                            <source srcset="./images/team-4-1200.jpg 1x, ./images/team-4-1200-2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <source srcset="./images/team-4-768.jpg 1x, ./images/team-4-768-2x.jpg 2x"
+                                media="(min-width: 768px)" />
+                            <source srcset="./images/team-4-480.jpg 1x, ./images/team-4-480-2x.jpg 2x"
+                                media="(max-width: 767px)" />
+                            <img width="100%" src="./images/team-4-480.jpg" alt="Михайло Єрмаков">
+                        </picture>
+
                         <div class="team-list-profession">
                             <h3 class="team-list-title">Михайло Єрмаков</h3>
                             <p class="team-list-text" lang="en">UI Designer</p>
@@ -381,10 +488,10 @@
             </div>
         </section>
     </main>
-    <!-- Footer -->
-    <!-- <footer class="footer">
+    <!--Footer -->
+    <footer class="footer">
         <div class="footer-container container">
-            <div>
+            <div class="footer-contacts">
                 <a class="link-logo link" href="./index.html" title="Посилання на початкову сторінку"><span
                         class="logo-web">Web</span>Studio</a>
                 <address class="footer-address">
@@ -438,7 +545,7 @@
                 <h2 class="subscribe-title">Підпишіться на розсилку</h2>
 
                 <div class="subscribe-input-field">
-                    //<span class="input-name">Пошта</span>//
+                    <!-- <span class="input-name">Пошта</span> -->
                     <input class="subscribe-input-text" type="email" name="email" placeholder="email" />
                     <div class="subscribe-qwert">
                         <button class="footer-btn" type="submit">Підписатися <svg class="subscribe-icon" width="24"
@@ -451,7 +558,7 @@
             </div>
 
         </div>
-    </footer> -->
+    </footer>
     <script>
         (() => {
             document
@@ -468,6 +575,7 @@
         })();
     </script>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
