--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,68 @@
                 </li>
             </ul>
 
+            <!-- --------------Mobile menu-------------- -->
+            <!-- --------------Button------------------- -->
+            <!-- <button type="button" class="menu-open" data-menu-open>O</button> -->
+            <button class="button-menu-open btn" type="button" data-menu-open>
+                <svg class="button-modal-svg" width="40" height="40">
+                    <use href="./images/icons.svg#icon-menu_40px"> </use>
+                </svg></button>
+            <!-- --------------Mobile menu-------------- -->
+            <!-- --------------Window------------------- -->
+        </div>
+        <div class="mobile-menu is-hidden" data-menu>
+            <div class="mobile-menu-container container">
+
+                <button type="button-menu-close" class="button-menu-close" data-menu-close>
+                    <svg class="button-modal-svg" width="40" height="40">
+                        <use href="./images/icons.svg#icon-close_40px"> </use>
+                    </svg>
+                </button>
+
+                <div>
+                    <ul class="mobile-menu-list list">
+                        <li class="mobile-menu-text">
+                            <a class="link current" href="./index.html" title="Посилання на сторінку: Студія">Студія</a>
+                        </li>
+                        <li class="mobile-menu-text">
+                            <a class="link" href="./portfolio.html"
+                                title="Посилання на сторінку: Портфоліо">Портфоліо</a>
+                        </li>
+                        <li class="mobile-menu-text"> <a class="link" href="#"
+                                title="Посилання на сторінку: Контакти">Контакти</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <ul class="mobmenu-contact list">
+                        <li class="mobmenu-contact-text">
+                            <a class="mobmenu-tel link" href="tel:+380961111111" title="За телефонувати">
+                                +38 096 111 11 11
+                            </a>
+                        </li>
+                        <li class="mobmenu-contact-text">
+                            <a class="mobmenu-mail link" href="mailto:info@devstudio.com"
+                                title="Посилання на електронну скриньку">
+                                info@devstudio.com
+                            </a>
+                        </li>
+
+                    </ul>
+
+                    <ul class="mobmenu-soc list">
+                        <li class="mobmenu-soc-text"><a class="mobmenu-soc-link link" href=""
+                                title="Посилання на сторінку: Instagram">Instagram</a></li>
+                        <li class="mobmenu-soc-text"><a class="mobmenu-soc-link link" href=""
+                                title="Посилання на сторінку: Twitter">Twitter</a></li>
+                        <li class="mobmenu-soc-text"><a class="mobmenu-soc-link link" href=""
+                                title="Посилання на сторінку: Facebock">Facebock</a></li>
+                        <li class="mobmenu-soc-text"><a class="mobmenu-soc-link link" href=""
+                                title="Посилання на сторінку: Linkedin">Linkedin</a></li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
     </header>
     <main>
@@ -226,78 +288,78 @@
         </section>
 
     </main>
-<!-- Footer -->
-<footer class="footer">
-    <div class="footer-container container">
-        <div>
-            <a class="link-logo link" href="./index.html" title="Посилання на початкову сторінку"><span
-                    class="logo-web">Web</span>Studio</a>
-            <address class="footer-address">
-                <ul class="footer-list list">
-                    <li> <a class="footer-item link" href="https://goo.gl/maps/MokrkqMKt1EXJKq38" target="_blank"
-                            rel="noopener noreferrer" title="Google Maps"> м.Київ,
-                            пр-т Лесі Українки, 26 </a> </li>
-                    <li><a class="footer-item link" href="mailto:info@devstudio.com"
-                            title="Посилання на електронну скриньку">info@devstudio.com</a></li>
-                    <li><a class="footer-item link" href="tel:+380961111111" title="За телефонувати">+38 096 111 11
-                            11</a>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container container">
+            <div class="footer-contacts">
+                <a class="link-logo link" href="./index.html" title="Посилання на початкову сторінку"><span
+                        class="logo-web">Web</span>Studio</a>
+                <address class="footer-address">
+                    <ul class="footer-list list">
+                        <li> <a class="footer-item link" href="https://goo.gl/maps/MokrkqMKt1EXJKq38" target="_blank"
+                                rel="noopener noreferrer" title="Google Maps"> м.Київ,
+                                пр-т Лесі Українки, 26 </a> </li>
+                        <li><a class="footer-item link" href="mailto:info@devstudio.com"
+                                title="Посилання на електронну скриньку">info@devstudio.com</a></li>
+                        <li><a class="footer-item link" href="tel:+380961111111" title="За телефонувати">+38 096 111 11
+                                11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+
+            <div class="footer-soc">
+                <h2 class="footer-soc-title">Приєднуйтесь</h2>
+                <ul class="footer-soc-list list">
+                    <li class="footer-soc-text">
+                        <a class="footer-soc-link link" href="#">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"> </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-text">
+                        <a class="footer-soc-link link" href="#">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter" widht="20"> </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-text">
+                        <a class="footer-soc-link link" href="">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"> </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-text">
+                        <a class="footer-soc-link link" href="">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"> </use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
-        </div>
+            </div>
+            <div class="subscribe">
+                <h2 class="subscribe-title">Підпишіться на розсилку</h2>
 
-        <div class="footer-soc">
-            <h2 class="footer-soc-title">Приєднуйтесь</h2>
-            <ul class="footer-soc-list list">
-                <li class="footer-soc-text">
-                    <a class="footer-soc-link link" href="#">
-                        <svg class="footer-soc-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-instagram"> </use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-soc-text">
-                    <a class="footer-soc-link link" href="#">
-                        <svg class="footer-soc-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-twitter" widht="20"> </use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-soc-text">
-                    <a class="footer-soc-link link" href="">
-                        <svg class="footer-soc-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-facebook"> </use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-soc-text">
-                    <a class="footer-soc-link link" href="">
-                        <svg class="footer-soc-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-linkedin"> </use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="subscribe">
-            <h2 class="subscribe-title">Підпишіться на розсилку</h2>
-
-            <div class="subscribe-input-field">
-                <!-- <span class="input-name">Пошта</span> -->
-                <input class="subscribe-input-text" type="email" name="email" placeholder="email" />
-                <div class="subscribe-qwert">
-                    <button class="footer-btn" type="submit">Підписатися <svg class="subscribe-icon" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-icon-send-1"> </use></button>
-                    <svg class="subscribe-icon" width="24" height="24">
+                <div class="subscribe-input-field">
+                    <!-- <span class="input-name">Пошта</span> -->
+                    <input class="subscribe-input-text" type="email" name="email" placeholder="email" />
+                    <div class="subscribe-qwert">
+                        <button class="footer-btn" type="submit">Підписатися <svg class="subscribe-icon" width="24"
+                                height="24">
+                                <use href="./images/icons.svg#icon-icon-send-1"> </use></button>
+                        <svg class="subscribe-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-icon-send-1"> </use>
+                    </div>
                 </div>
             </div>
+
         </div>
-
-    </div>
-</footer>
-
+    </footer>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
